--- a/botao.html
+++ b/botao.html
@@ -9,7 +9,7 @@
 <body>
     <div style="border: 1px solid #ff0095; display: inline-block;
     border-radius: 6px; padding: 10px 20px; background-color: #ff0095;
-    color:white; font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: 500;">
+    color:white; font-family: Verdana, Geneva, Tahoma, sans-serif; font-weight: bolder;">
         Botão
     </div>
 </body> 
